--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-		"davzie/laravel-bootstrap": "1.*"
+		"davzie/laravel-bootstrap": "1.*",
+		"way/generators": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
