Finalizado cadastro e edição do sistema.
Finalizado telas:
- Index
- Cadastro
- Edição
- Exclusão
- Relatório

Removido Laravel bootstraper

--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-		"davzie/laravel-bootstrap": "1.*",
 		"way/generators": "dev-master",
-		"anahkiasen/former": "dev-master"
+		"anahkiasen/former": "dev-master",
+		"kennedytedesco/validation": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
